assets/css/common.css
* {
    margin: 0;
    font-family: Arial, "Microsoft YaHei UI Light", Helvetica, sans-serif;
    box-sizing: border-box;
    font-size: 16px;
}

a {
    color: #2a7ae2;
    text-decoration: none;
}

article > h1 {
    font-weight: normal;
    border-bottom: 1px solid #ddd;
    margin: .5em 0;
}

article > h2,
article > h3 {
    font-family: Georgia, "SimSun", serif;
    margin: .5em 0;
    font-weight: normal;
}

article p, strong {
    margin: 1em 0;
}

h2, h3, h4, h5, h6 {
    font-family: Arial, SimSun, sans-serif;
}

h1, .h1 {
    font-size: 40px;
}

h2, .h2 {
    font-size:28px;
}

h3, .h3 {
    font-size:24px
}

h4, .h4 {
    font-size:18px
}

h5, .h5 {
    font-size:14px
}

h6, .h6 {
    font-size:12px
}

p {
    padding: .2em 0;
}

code {
    color: #eb7979;
    background-color: #eee;
    padding: 1px .3em;
    border-radius: 4px;
}

code,
code span {
    font-family: Consolas, Monospaced, sans-serif;
}

strong {
    font-family: "Microsoft YaHei UI", Segoe, Arial, sans-serif;

}

table {
    border-collapse: collapse;
    margin:0 auto;
}

code table {
    margin:0;
}
thead tr {
    border-bottom: 2px solid black;
}

th, td {
    padding: 2px 1em;
}

.hidden {
    display: none !important;
}

.paged {
    display: none!important;
}

.bold {
    font-weight: bold;
    font-family: "Microsoft YaHei", Segoe, Arial, sans-serif;
}

.fixed {
    position: fixed;
    top: 0;
}

.underlined {
    border-bottom: 1px solid #eee;
}

div.highlight {
    background-color: #eee;
    padding: .7em;
    border-radius: .3em;
    overflow-x: auto;
}

.highlight code {
    padding: 0;
    color: inherit;
    background-color: transparent;
}

blockquote {
    margin: .5em 0;
    padding: .5em 2em;
    background-color: #eee;
    border-left: .5em #999 solid;
    font-style: italic;
}

blockquote > p {
}

/* handle positioning exception with formulas in blockquote*/
blockquote .MJXc-display {
    padding-bottom: 1em;
    margin-bottom: 0;
}

a:hover {
    cursor: pointer;
    text-decoration: underline;
}

body {
    line-height: 1.6;
    display: flex;
    min-height: 100vh;
    flex-flow: column;
}

html, body {
    scroll-behavior: smooth;
}

.navigation {
    display: flex;
}

.home-icon {
    flex: 1;
    color: white;
    margin: .25em;
    font-weight: bolder;
    line-height: 100%;
}

.header {
    background: #bbb url(https://i.loli.net/2019/08/01/5d429efb33a9642629.jpg) center;
    background-size: cover;
}

.main-title {
    font-size: 4em;
    font-weight: bolder;
}

.banner {
    text-align: center;
    color: white;
    margin-top: 6em;
    margin-bottom: 6em;
}

.main {
    display: flex;
    justify-content: center;
    /* to ensure footer in the bottom*/
    flex: 1;
}

.main-text {
    margin-top: 3em;
    border-bottom: 1px solid #eee;
    padding-bottom: 2em;
}

.main-text > p:first-child {
    margin-top: 0;
}

.post-card {
    color: black;
    padding: 1em;
    margin: .5em;
    transition: .2s;
    overflow: visible;
    border-top: #eee solid 1px;
}

.post-card:hover {
    cursor: pointer;
    box-shadow: 4px 2px #1B76C4 inset, -2px -2px #1B76C4 inset;
    padding-left: 1.5em;
    padding-right: .5em;
}

.post-subtitle {
    font-family: inherit;
    padding-left: 2px;
    font-weight: lighter;
}

.post-preview {
    padding: .5em 0;
    color: #808080;
}

.post-preview {
    font-size: .9em;
}

.post-meta {
    display: flex;
}

.post-date {
    flex: 1;
}

#post-switch {
    padding: 2em 0;
    display: flex;
    justify-content: space-between;
}

#post-switch > div {
    width: 40%;
}

#post-switch a {
    text-align: center;
    display: block;
    color: black;
    border: 1px black solid;
    border-radius: .3em;
    padding: .5em;
}

#post-switch a:hover {
    text-decoration: none;
    color: #1B76C4;
    border-color: #1B76C4;
}

.tag {
    font-weight: lighter;
    font-size: small;
    padding: 0 .5em;
    margin: .2em .2em;
    display: inline-block;
    border-radius: .75em;
    color: black;
    border: 1px solid #ddd;
    transition: .3s;
}

.tag-selected {
    background-color: #eee;
}

.tag:hover {
    text-decoration: none;
    color: #1B76C4;
    cursor: pointer;
    border-color: #1B76C4;
}

#show-tags-a {
    display: block;
    margin: 1em 3px;
}

.header-tag {
    color: white;
}

footer {
    width: 100%;
    text-align: center;
    padding : 0 20vw;
    color: #808080;
}

footer > .container {
    padding: 1.5em 0;
    /*border-top: 1px solid #eee;*/
}

footer * {
    font-size: 13px;
}

#nav-wrap a,
#nav-wrap a:before {
    color: inherit;
    text-transform: uppercase;
}

#nav ul {
    color: white;
}

.nav-toggle {
    margin: .5em;
    float: right;
}

.nav-toggle:hover {
    text-decoration: none;
}

.nav-toggle:before {
    color: white;
    font-size: 2em;
}

#nav-wrap {
    color: white;
    width: 100%;
    height: 3em;
    position: absolute;
    transition: .5s;
}

.nav-detach {
    background-color: rgba(255, 255, 255, .8);
    position: fixed!important;
    top: -58px;
    z-index: 1;
}

.nav-detach a,
.nav-detach a:before {
    color: black!important;
}

.nav-active {
    top: 0;
}

#sidebar {
    width: 0;
    padding-top: 3em;
}

#toc > li {
    list-style: none;
}

.toc-link {
    list-style-type: none;
    display: block;
    color: #888;
    font-size: .9em;
    padding: .2em 0;
}

.toc-title {
    padding-left: .5em;
    text-transform: uppercase;
    padding-bottom: 1.3em;
    font-size: 1.2em;
    color: #555;
}

.toc-link:hover {
    text-decoration: none;
    color: #2a7ae2;
    margin-left: .2em;
    transition: .3s;
}

.h-active {
    border-radius: .3em;
    background-color: #eee;
}

.toc-h1 {
    padding-left: 1em;
    font-weight: bold;
}

.toc-h2 {
    padding-left: 1.5em;
}

.toc-h3 {
    padding-left: 2em;
    font-size: .9em;
}

img {
}

.article-title {
    font-size: 3em;
}

.article-subtitle {
    font-size: 1.5em;
}

.article-tags {
}

.article-banner {
    text-align: left;
}

.nav-collapse ul {
    margin: 0;
    padding: 0;
    width: 100%;
    display: block;
    list-style: none;
}

.nav-collapse li {
    width: 100%;
    display: block;
}

.js .nav-collapse {
    clip: rect(0 0 0 0);
    max-height: 0;
    position: absolute;
    display: block;
    overflow: hidden;
    zoom: 1;
}

.nav-collapse.opened {
    max-height: 9999px;
}

.nav-toggle {
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/* for mobile devices that responsive nav is enabled */
@media screen and (max-width: 40em) {
    #nav ul {
        list-style:none;
        float:left;
        /* don't touch above line of code, dangerous */
    }

    .nav-collapse {
        border-radius: .3em;
        margin-left: calc(100% - 10em);
        color: black;
        background: white;
    }

    #nav li {
        color: #666;
        width:100%;
        display:block;
        font-weight: bold;
        margin: .5em 0;
        text-align: center;
    }

    #nav a {
        display: block;
        font-size: 1.2em;
    }

    .hidden-on-mobile {
        display: none !important;
    }

    * {
        font-size: 14px;
    }

    .main-text {
        width: 100vw;
    }

    .main-title {
        font-size: 32px;
    }

    h1 {
        font-size: 32px;
    }

    h2 {
        font-size: 24px;
    }

    footer {
        padding: 0 1em;
    }

    .article-banner {
        padding-left: 1em;
    }
}

/* for desktop devices on which responsive nav is disabled*/
@media screen and (min-width: 40em) {
    #nav > ul {
        width: 100%;
        display: flex;
        justify-content: center;
    }

    #nav .hidden-on-mobile {
        flex: 1;
    }

    #nav a,
    #nav a:before{
        font-weight: bolder;
        line-height: 100%;
    }

    #nav li {
        display:inline-block;
        width:auto;
        margin: .5em 1em;
    }

    .show-on-mobile {
        display: none !important;
    }

    .js .nav-collapse {
        position: relative;
    }
    .js .nav-collapse.closed {
        max-height: none;
    }
    .nav-toggle {
        display: none!important;
    }

    #toc, #tags-showcase {
        width: 15em;
        padding-left: 1em;
    }
}

/* for tablet users*/
@media screen and (min-width: 40em) and (max-width: 80em) {
    .article-banner {
        padding-left: 3em;
    }

    .main-text {
        width: 75%;
    }

    #sidebar {
        width: 25%;
    }

    .main {
        margin-left: 3em;
        margin-right: 3em;
    }
}

/* for wide screen devices*/
@media screen and (min-width: 80em) {
    .article-banner {
        padding-left: 25vw;
    }

    .main-text {
        width: 50%;
    }

    .sidebar-detached {
        position: fixed;
        top: 0;
        left: 75%;
    }
}

